# fluent

./: CMakeLists.txt
dockerfiles/: anna.dockerfile  benchmark.cpp  kops.dockerfile  monitoring.cpp  monitoring_utils.hpp  server.cpp  start.sh
functions/: client.py  run_benchmark.py  server.py  trigger_bench.py
functions/benchmarks/: causal.py  causal_bench.py  causal_bench_1M.py  causal_bench_1M_parallel.py  causal_bench_parallel_dag.py  causal_test.py  server.py
functions/executor/: call.py  pin.py  server.py  utils.py
functions/include/: server_utils.py
functions/scheduler/: call.py  create.py  server.py  utils.py
include/: kvs_async_client.hpp  threads.hpp
include/lattices/: core_lattices.hpp
include/proto/: functions.proto  kvs.proto  requests.proto
include/zmq/: zmq_util.cpp  zmq_util.hpp
k8s/: create_cluster.py  delete_all.sh  management_server.py  spin_up_bench.py  spin_up_faas.py
kvs/: CMakeLists.txt
kvs/include/: hash_ring.hpp  kvs_threads.hpp
relational/: CMakeLists.txt
relational/cmake/: testing.cmake
relational/collections/: CMakeLists.txt  all.hpp  channel.hpp  collection.hpp  collection_util.cpp  collection_util.hpp  (+7 more)
relational/relop/: CMakeLists.txt  all.hpp  collection.hpp  collection_test.cpp  cross.hpp  erase.hpp  filter.hpp  groupby.hpp  groupby_test.cpp  insert.hpp  iterable.hpp  iterable_test.cpp  join.hpp  join_test.cpp  map.hpp  orderby.hpp  project.hpp  project_test.cpp  relop.hpp
relational/relop/aggops/: aggregates.hpp
scripts/: build-all.sh  install-dependencies-osx.sh  install-dependencies.sh  make.sh
(+72 files in other folders)
