CMAKE_MINIMUM_REQUIRED(VERSION 3.6)

MACRO(CREATE_RELOP_TEST NAME)
    CREATE_NAMED_TEST(${NAME} ${NAME})
    TARGET_LINK_LIBRARIES(${NAME} zmq flzmq)
    ADD_DEPENDENCIES(${NAME} flzmq zeromq zeromqcpp)
ENDMACRO(CREATE_RELOP_TEST)

CREATE_RELOP_TEST(iterable_test)
CREATE_RELOP_TEST(project_test)
CREATE_RELOP_TEST(join_test)
CREATE_RELOP_TEST(groupby_test)